[package]
name = "gltf-validator-web"
version = "0.1.0"
authors = ["Benjamin Wasty <benny.wasty@gmail.com>"]

[dependencies]
gltf = "0.9.2"

[profile.release]
# Optimize for size. The 'more agressive' `z` actually produces larger binaries
# Only allowed on nightly, therefore commented out by default
# opt-level = "s"
